; ModuleID = '/home/carl/AnghaBench/linux/kernel/extr_taskstats.c_cmd_attr_register_cpumask.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/extr_taskstats.c_cmd_attr_register_cpumask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.genl_info = type { i32, i32* }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@TASKSTATS_CMD_ATTR_REGISTER_CPUMASK = common dso_local global i64 0, align 8
@REGISTER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.genl_info*)* @cmd_attr_register_cpumask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmd_attr_register_cpumask(%struct.genl_info* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.genl_info*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.genl_info* %0, %struct.genl_info** %3, align 8
  %6 = load i32, i32* @GFP_KERNEL, align 4
  %7 = call i32 @alloc_cpumask_var(i32* %4, i32 %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* @ENOMEM, align 4
  %11 = sub nsw i32 0, %10
  store i32 %11, i32* %2, align 4
  br label %35

12:                                               ; preds = %1
  %13 = load %struct.genl_info*, %struct.genl_info** %3, align 8
  %14 = getelementptr inbounds %struct.genl_info, %struct.genl_info* %13, i32 0, i32 1
  %15 = load i32*, i32** %14, align 8
  %16 = load i64, i64* @TASKSTATS_CMD_ATTR_REGISTER_CPUMASK, align 8
  %17 = getelementptr inbounds i32, i32* %15, i64 %16
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @parse(i32 %18, i32 %19)
  store i32 %20, i32* %5, align 4
  %21 = load i32, i32* %5, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %12
  br label %31

24:                                               ; preds = %12
  %25 = load %struct.genl_info*, %struct.genl_info** %3, align 8
  %26 = getelementptr inbounds %struct.genl_info, %struct.genl_info* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 8
  %28 = load i32, i32* %4, align 4
  %29 = load i32, i32* @REGISTER, align 4
  %30 = call i32 @add_del_listener(i32 %27, i32 %28, i32 %29)
  store i32 %30, i32* %5, align 4
  br label %31

31:                                               ; preds = %24, %23
  %32 = load i32, i32* %4, align 4
  %33 = call i32 @free_cpumask_var(i32 %32)
  %34 = load i32, i32* %5, align 4
  store i32 %34, i32* %2, align 4
  br label %35

35:                                               ; preds = %31, %9
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i32 @alloc_cpumask_var(i32*, i32) #1

declare dso_local i32 @parse(i32, i32) #1

declare dso_local i32 @add_del_listener(i32, i32, i32) #1

declare dso_local i32 @free_cpumask_var(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
